# wordEc

./: .gitignore  CMakeLists.txt  README.md  README.txt  build.sh  clean.sh
benchmark/: case01_cir1.poly  case01_cir2.poly  case03_cir1.poly  case03_cir2.poly  case04_cir2.poly  case05_cir1.poly  func1_impl.txt  func1_spec.txt  func2_impl.txt  func2_spec.txt  gen.py
benchmark/case00/: case00_cir1.poly  case00_cir2.ground
benchmark/case01/: case01_cir1.poly  case01_cir2.ground  case01_cir2.poly
benchmark/case03/: case03_cir2.ground  case03_cir2.poly  cir1.v  cir1_t.v  cir1_word.v  cir2.v  cir2_t.v
benchmark/case04/: case04_cir1.poly  case04_cir2.ground
benchmark/case05/: case05_cir2.ground  case05_cir2.poly  cir1_t.v  cir2_t.v  cir2_word.v
benchmark/case07/: case07_cir1.poly  case07_cir2.ground  case07_cir2.poly  cir1.v  cir1_t.v  cir1_word.v  cir2.v  cir2_t.v  cir2_word.v  input
benchmark/case11/: case11_cir1.poly  case11_cir2.ground  cir1.v  cir1_word.v  cir2.v  input
benchmark/case12/: case12_cir2.ground  cir1_word.v  cir2.v  cir2_word.v  input
benchmark/case13/: case13_cir1.poly  case13_cir2.ground  cir1.v  cir1_word.v  cir2_word.v  input
benchmark/case20/: cir1_word.v  cir2.v  cir2_word.v  input
benchmark/case30/: cir1.v  cir1_word.v  cir2.v  cir2_word.v  input
benchmark/test01/: cir2_word.v  one_step_37.constraint
benchmark/test02/: cir1.v  cir1_word.v  cir2.v
benchmark/test03/: cir2_word.v
benchmark/test04/: cir1.v  test04_cir1.poly
benchmark/test05/: test05_cir1.poly  test05_cir2.ground
benchmark/test06/: test06_cir1.poly  test06_cir2.ground
benchmark/test07/: case07_cir1.poly  case07_cir2.ground  one_step.constraint
cmake/: FindGMP.cmake  sword_add_module.cmake
examples/: CMakeLists.txt  rewrite.cpp  wordEc.cpp  zero_check.cpp  zero_eq.cpp  zero_eq_cl.cpp
src/: CMakeLists.txt  ExpressionTree.cpp  ExpressionTree.h  Makefile  Monomial.cpp  Monomial.h  PolyMgr.cpp  PolyMgr.h  Polynomial.cpp  Polynomial.h  Rewrite.cpp  Rewrite.h  SmartObj.h  Term.cpp  Term.h  Var.cpp  Var.h  allocator.h  cmake_install.cmake  platform.h  sword_export.h
src/module/: smt_gen.py
tests/: CMakeLists.txt  readFile.h  test_add.cpp  test_div.cpp  test_mul.cpp  test_sub.cpp  test_zero_eq.cpp
wordEc/: Cargo.toml
wordEc/src/: main.rs
